# SweBressaniDev

./: .gitignore  Package.resolved  Package.swift  README.md
Rust/SweBressaniDev/: Cargo.toml  build.rs
Rust/SweBressaniDev/src/: lib.rs  main.rs  swe.rs  sweinterface.rs
Sources/: .gitignore  CMakeLists.txt
Sources/SweBressaniDev/: NumerologieCore.swift  SweBressaniDev.swift  SweCore.swift  SwePdf.swift
Sources/SweBressaniDev/View/: VAstrologie.swift  VDatePicker.swift  VInput.swift  VLocalisationTextField.swift  VLocalisationTextFieldIOs.swift  VNamesTextField.swift  VNumerologie.swift  VSelection.swift  VTitleData.swift  VTitleLocalisation.swift  VTitleLocalisationIOs.swift  VTitleLocalisationiOs.swift  VTitleNumerologie.swift
Sources/SweBressaniDev/View/SubView/: VLocalisationTextFieldIOs.swift  VNamesTextField.swift  VTelField.swift  VTitleData.swift  VTitlePersonaliteJuridique.swift  VTitlePhone.swift
Sources/SweBressaniDev/View/SubView/Astrologie/: AstrologieShape.swift  VAstrologieAssetAngles.swift  VAstrologieAssetBodies.swift  VAstrologieAssetHouses.swift  VAstrologieAssetSigns.swift  VAstrologieBodies.swift  VAstrologieChart.swift  VAstrologieHouses.swift  VAstrologieTableau1.swift  VAstrologieTableau2.swift  VAstrologieZodiac.swift
Sources/SweBressaniDev/View/SubView/Astrologie/Chart/: AstrologieShape.swift  VAstrologieAngles.swift  VAstrologieAssetBodies.swift  VAstrologieHouses.swift
Sources/SweBressaniDev/View/SubView/Astrologie/Tableau1/: VAstrologieTableau1Bodies.swift  VAstrologieTableau1Signs.swift
Sources/SweBressaniDev/View/SubView/Astrologie/Tableau2/: AstrologieTableau2Shape.swift  VAstrologieTableau2Angles.swift  VAstrologieTableau2Bodies.swift  VAtrologieTableau2AspectsBodies.swift
Sources/SweBressaniDev/View/SubView/Numerologie/: VNumerologieCarreMagique.swift  VNumerologieCarreMagiqueNom.swift  VNumerologieCarreMagiquePrenom.swift  VNumerologieCycles.swift  VNumerologieCyclesAdjacents.swift  VNumerologieCyclesRealisations.swift  VNumerologieCyclesUniversels.swift
Sources/SweBressaniDevExec/: main.swift
Sources/SweSvg/: DrawAstrologieView.swift  SweCore.swift  SweSvg.swift  main.swift
Sources/SweSvg/SweSwiftUi/: Const.swift  SweSwiftUi.swift
Sources/SweSvg/SweSwiftUi/Enum/: Angle.swift  Calandar.swift  Signs.swift
Sources/SweSvg/SweSwiftUi/View/: DrawAstrologieView.swift
Sources/SweSvgExec/: main.swift
Sources/cpp-exec/: main.cpp
Sources/cpplib/: cpplib.cpp
Sources/cpplib/include/: cpplib.h
Sources/cwrapper/: cwrapper.cpp
Sources/cwrapper/include/: cwrapper.h
Sources/svglib/: .gitignore  CMakeLists.txt  circle.cpp  data.cpp  document.cpp  image.cpp  line.cpp
Sources/svglib/include/: svglib.h
Sources/sweinterfacelib/: .gitignore  CMakeLists.txt  SweInterface.cpp  angle.cpp  aspect.cpp  astre.cpp  draw.cpp  draw_aspect_line.cpp  draw_bodie_astre.cpp  draw_bodie_line.cpp  draw_house_angle.cpp  draw_house_line.cpp  draw_house_number.cpp  draw_zodiac_circle.cpp  draw_zodiac_line.cpp  draw_zodiac_sign.cpp  house.cpp  sign.cpp  swe02.cpp  swe03.cpp  swe07.cpp  swe08.cpp  swe14.cpp  swe17.cpp  timezone.cpp
Sources/sweinterfacelib/include/: sweinterfacelib.h
Sources/swelib/: .gitignore  CMakeLists.txt
Sources/swelib/include/: swelib.h
Sources/wasmlib/: .gitignore  CMakeLists.txt  wasm.cpp  wasm.sh
Sources/wasmlib/include/: wasm.h
Tests/SweSvgTests/: SweSvgTests.swift
cgi/: CMakeLists.txt  compile.sh  compile_ubuntu.sh  main.cpp
cgi/Swe/: Swe.cpp  Swe.h
cmake/svglib/: CMakeLists.txt
cmake/sweinterfacelib/: CMakeLists.txt
cmake/swelib/: CMakeLists.txt
cmake_compile_cpp_only/: CMakeLists.txt  run_ipad_alpine.sh  run_mbp.sh
cmake_compile_cpp_only/Sources/: main.cpp
