[package]
name = "swe_bressani_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
chrono = "0.4"
libc = "0.2"
cxx = "1.0"

[build-dependencies]
cc = "1.0"
cxx-build = "1.0"